<resources>
    <string name="app_name">Map Timeline Tool</string>
    <string name="action_add_point">Add</string>
    <string name="action_export_csv">Export CSV</string>
    <string name="action_export_geojson">Export GeoJSON</string>
    <string name="action_export_kml">Export KML</string>
    <string name="action_export_kmz">Export KMZ</string>
    <string name="action_export_zip">Export ZIP</string>
    <string name="action_import_csv">Import CSV</string>
...
    <string name="action_back">Back</string>
    <string name="action_center">Center</string>
    <string name="tab_map">Map</string>
    <string name="tab_list">List</string>
    <string name="tab_tags">Tags</string>
    <string name="tab_settings">Settings</string>
    <string name="dialog_title_new_point">New Point</string>
    <string name="dialog_title_edit_point">Edit Point</string>
    <string name="dialog_location_confirmation_title">Save with fallback location?</string>
    <string name="dialog_location_confirmation_approximate">Location is approximate or from a recent previous fix. Save this point anyway?</string>
    <string name="dialog_location_confirmation_stale">Only a stale last known location is available. Save this point anyway?</string>
    <string name="dialog_title_label">Name</string>
    <string name="dialog_note_label">Note (optional)</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_delete">Delete</string>
    <string name="action_take_photo">Take photo</string>
    <string name="action_retake_photo">Retake</string>
    <string name="action_remove_photo">Remove photo</string>
    <string name="action_view_photo">View photo</string>
    <string name="action_share_photo">Share photo</string>
    <string name="photo_share_chooser_title">Share photo</string>
...
